--- a/index.html
+++ b/index.html
@@ -1,95 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/main.css" />
     <title>Comfy House</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- navbar -->
     <nav class="navbar">
-        <div class="navbar-center">
-            <span class="nav-icon">
-                <i class="fa fa-bars"></i>
-            </span>
-            <img src="./images/logo.svg" alt="storelogo">
-            <div class="cart-btn">
-                <span class="nav-icon">
-                    <i class="fa fa-cart-plus"></i>
-                </span>
-                <div class="cart-items">0</div>
-            </div>
+      <div class="navbar-center">
+        <span class="nav-icon">
+          <i class="fa fa-bars"></i>
+        </span>
+        <img src="./images/logo.svg" alt="storelogo" />
+        <div class="cart-btn">
+          <span class="nav-icon">
+            <i class="fa fa-cart-plus"></i>
+          </span>
+          <div class="cart-items">0</div>
         </div>
+      </div>
     </nav>
     <!-- end of nabar -->
     <!-- hero -->
     <header class="hero">
-        <div class="banner">
-            <h1 class="banner-title">Furniture Collection</h1>
-            <button class="banner-btn">Shop now</button>
-        </div>
+      <div class="banner">
+        <h1 class="banner-title">Furniture Collection</h1>
+        <button class="banner-btn">Shop now</button>
+      </div>
     </header>
     <!-- end of hero -->
 
     <!-- Products -->
     <section class="products">
-        <div class="section-title">
-            <h2>Our products</h2>
-        </div>
-        <div class="products-center">
-            <!-- single product -->
-            <article class="product">
-                <div class="img-container">
-                    <img class="product-img" src="./images/product-1.jpeg" alt="product1">
-                    <button class="bag-btn" data-id="1">
-                        <i class="fa fa-shopping-cart"></i>
-                        add to bag
-                    </button>
-                </div>
-                <h3>Queen bed</h3>
-                <h4>$16</h4>
-            </article>
-            <!-- end of single product -->
-        </div>
+      <div class="section-title">
+        <h2>Our products</h2>
+      </div>
+      <div class="products-center"></div>
     </section>
     <!-- End of Product -->
     <!-- Cart -->
     <div class="cart-overlay">
-        <div class="cart">
-            <span class="close-cart">
-                <i class="fa fa-window-close"></i>
-            </span>
-            <h2>your cart</h2>
-            <div class="cart-content">
-                <!-- cart item -->
-                <div class="cart-item">
-                    <img src="./images/product-1.jpeg" alt="product-1">
-                    <div>
-                        <h4>Queen bed</h4>
-                        <h5>$9.99</h5>
-                        <span class="remove-iem">remove</span>
-                    </div>
-                    <div>
-                        <i class="fa fa-chevron-up"></i>
-                        <p class="item-amount">1</p>
-                        <i class="fa fa-chevron-down"></i>
-                    </div>
-                </div>
-                <!-- end of card item -->
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fa fa-window-close"></i>
+        </span>
+        <h2>your cart</h2>
+        <div class="cart-content">
+          <!-- cart item -->
+          <div class="cart-item">
+            <img src="./images/product-1.jpeg" alt="product-1" />
+            <div>
+              <h4>Queen bed</h4>
+              <h5>$9.99</h5>
+              <span class="remove-iem">remove</span>
             </div>
-            <div class="cart-footer">
-                <h3>your total : $ <span class="cart-total">0</span></h3>
-                <button class="clear-cart banner-btn">Clear cart</button>
+            <div>
+              <i class="fa fa-chevron-up"></i>
+              <p class="item-amount">1</p>
+              <i class="fa fa-chevron-down"></i>
             </div>
+          </div>
+          <!-- end of card item -->
         </div>
+        <div class="cart-footer">
+          <h3>your total : $ <span class="cart-total">0</span></h3>
+          <button class="clear-cart banner-btn">Clear cart</button>
+        </div>
+      </div>
     </div>
     <!-- End of cart -->
     <script src="https://use.fontawesome.com/31bf896b0b.js"></script>
-    <script src="js/app.js"></script>
-</body>
-
+    <script type="module" src="js/app.js"></script>
+  </body>
 </html>
