--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
   </div>
   <!-- End of cart -->
   <script src="https://use.fontawesome.com/31bf896b0b.js"></script>
-  <script type="module" src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
